Add EF Core migrations

--- a/backend/DevTrackr.API/appsettings.json
+++ b/backend/DevTrackr.API/appsettings.json
@@ -4,6 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+    
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+   "DevTrackrDatabase": "Host=localhost;Port=5432;Database=DevTrackrDatabase;Username=postgres;Password=1;"
+  }
 }
